cnd/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/iz175231.cpp

#define iz175231_FOO(a,b,c)

void iz175231_foo() {
    iz175231_FOO(a);
}